# rtk

./: .gitignore  Cargo.toml  README.md  denoise.sh
examples/: cornell_box.toml  plane_with_spheres.toml  prism.toml  quads.toml  quads_light.toml  sphere.toml
oidn/: Cargo.toml
oidn/oidn-sys/: Cargo.toml  build.rs
oidn/src/: lib.rs
src/: cli.rs  denoise.rs  image.rs  main.rs  material.rs  object.rs  render.rs  scene.rs
