[package]
name = "rtk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Performance is critical for development; max optimization level is enabled for debug builds

[profile.dev]
opt-level = 3

[dependencies]
nalgebra = "0.32.3"
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive"] }
toml = "0.8.0"
