[package]
name = "rtk"
version = "0.1.0"
edition = "2021"
authors = ["labyrinthcritic"]
description = "ray-tracing kiwis"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Performance is critical for development; max optimization level is enabled for debug builds

[profile.dev]
opt-level = 3

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
image = "0.24.8"
nalgebra = "0.32.3"
rand = "0.8.5"
rayon = "1.8.1"
serde = { version = "1.0.195", features = ["derive"] }
toml = "0.8.8"
oidn = { path = "./oidn", optional = true }

[features]
default = ["denoise"]
denoise = ["oidn"]
